--- a/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/src/FormNota.form
+++ b/3_ProjNotasAlunoBD_Aula_04-09-2024_Edu/src/FormNota.form
@@ -190,6 +190,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="textnota2">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textnota2ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="butCadastrar">
       <Properties>
