--- a/4_ProjFinan_Edu/src/source/FormDados.form
+++ b/4_ProjFinan_Edu/src/source/FormDados.form
@@ -157,7 +157,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Numero de Parcelas"/>
+        <Property name="text" type="java.lang.String" value="N&#xfa;mero de Parcelas"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="textNumParc">
